--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "food-festival",
+  "name": "module-19-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
+    "webpack": "webpack --watch",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AlexRahmanov/Food-Festival.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AlexRahmanov/Food-Festival/issues"
+  "devDependencies": {
+    "@webpack-cli/serve": "^1.4.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
-  "homepage": "https://github.com/AlexRahmanov/Food-Festival#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "popper.js": "^1.16.0"
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.0",
+    "save": "^2.5.0"
   }
 }
